--- a/index.html
+++ b/index.html
@@ -31,7 +31,39 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <section>
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button type="button">Замовити послугу</button>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+          <p>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування
+            позиції.
+          </p>
+        </li>
+        <li>
+          <h2>ПУНКТУАЛЬНІСТЬ</h2>
+          <p>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у
+            себе.
+          </p>
+        </li>
+        <li>
+          <h2>ПЛАНУВАННЯ</h2>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+          <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+          <p>
+            Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.
+          </p>
+        </li>
+      </ul>
+    </section>
     <footer></footer>
   </body>
 </html>
