--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </ul>
         <ul>
           <li>
-            <a href="">info@devstudio.com</a>
+            <a href="/">info@devstudio.com</a>
           </li>
           <li>
-            <a href="">+38 096 111 11 11</a>
+            <a href="/">+38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
