--- a/index.html
+++ b/index.html
@@ -39,17 +39,11 @@
       <ul>
         <li>
           <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
+          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li>
           <h2>ПУНКТУАЛЬНІСТЬ</h2>
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
+          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
           <h2>ПЛАНУВАННЯ</h2>
@@ -57,10 +51,21 @@
         </li>
         <li>
           <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
+          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Чим ми займаємося</h2>
+      <ul>
+        <li>
+          <img src="./images/box1.jpg" alt="Працюємо над симатичним та якісним кодом сайтів" />
+        </li>
+        <li>
+          <img src="./images/box2.jpg" alt="Створюємо мобільні застосунки" />
+        </li>
+        <li>
+          <img src="./images/box3.jpg" alt="Розробляємо дизайн сайтів" />
         </li>
       </ul>
     </section>
