--- a/index.html
+++ b/index.html
@@ -31,44 +31,77 @@
         </ul>
       </nav>
     </header>
-    <section>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button type="button">Замовити послугу</button>
-    </section>
-    <section>
-      <ul>
-        <li>
-          <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        </li>
-        <li>
-          <h2>ПУНКТУАЛЬНІСТЬ</h2>
-          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        </li>
-        <li>
-          <h2>ПЛАНУВАННЯ</h2>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
-        <li>
-          <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Чим ми займаємося</h2>
-      <ul>
-        <li>
-          <img src="./images/box1.jpg" alt="Працюємо над симатичним та якісним кодом сайтів" />
-        </li>
-        <li>
-          <img src="./images/box2.jpg" alt="Створюємо мобільні застосунки" />
-        </li>
-        <li>
-          <img src="./images/box3.jpg" alt="Розробляємо дизайн сайтів" />
-        </li>
-      </ul>
-    </section>
-    <footer></footer>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h2>ПЛАНУВАННЯ</h2>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/box1.jpg"
+              alt="Працюємо над симатичним та якісним кодом сайтів"
+              width="370"
+            />
+          </li>
+          <li>
+            <img src="./images/box2.jpg" alt="Створюємо мобільні застосунки" width="370" />
+          </li>
+          <li>
+            <img src="./images/box3.jpg" alt="Розробляємо дизайн сайтів" width="370" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/teamcard1.jpg" alt="Ігор Дем'яненко на посаді Product Designer" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/teamcard2.jpg" alt="Ольга Рєпіна на посаді Frontend Developer" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/teamcard3.jpg" alt="Микола Тарасов на посаді Marketing" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/teamcard4.jpg" alt="Михайло Єрмаков на посаді UI Designer" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      
+    </footer>
   </body>
 </html>
