--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/teamcard1.jpg" alt="Ігор Дем'яненко на посаді Product Designer" />
+            <img src="./images/teamcard1.jpg" alt="Ігор Дем'яненко на посаді Product Designer" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/teamcard2.jpg" alt="Ольга Рєпіна на посаді Frontend Developer" />
+            <img src="./images/teamcard2.jpg" alt="Ольга Рєпіна на посаді Frontend Developer" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/teamcard3.jpg" alt="Микола Тарасов на посаді Marketing" />
+            <img src="./images/teamcard3.jpg" alt="Микола Тарасов на посаді Marketing" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/teamcard4.jpg" alt="Михайло Єрмаков на посаді UI Designer" />
+            <img src="./images/teamcard4.jpg" alt="Михайло Єрмаков на посаді UI Designer" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -101,7 +101,20 @@
       </section>
     </main>
     <footer>
-      
+      <a href="/">WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
