До списку студія додано посилання

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="/">WebStudio</a>
         <ul>
           <li>
-            <a href="/">Студія</a>
+            <a href="./index.html">Студія</a>
           </li>
           <li>
             <a href="/">Портфоліо</a>
